k8s/ai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workmaite-ai
  namespace: skala3-finalproj-class2-team9
  labels:
    app: workmaite-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workmaite-ai
  template:
    metadata:
      labels:
        app: workmaite-ai
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: workmaite-ai
          image: amdp-registry.skala-ai.com/skala26a-ai2/workmaite-ai:ac5ae52
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 120
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: workmaite-ai
  namespace: skala3-finalproj-class2-team9
  labels:
    app: workmaite-ai
spec:
  type: ClusterIP
  selector:
    app: workmaite-ai
  ports:
    - name: http
      port: 8000
      targetPort: 8000
