k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workmaite-backend
  namespace: skala3-finalproj-class2-team9
  labels:
    app: workmaite-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workmaite-backend
  template:
    metadata:
      labels:
        app: workmaite-backend
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: workmaite-backend
          image: amdp-registry.skala-ai.com/skala26a-ai2/workmaite-backend:8943d89
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: workmaite-backend
  namespace: skala3-finalproj-class2-team9
  labels:
    app: workmaite-backend
spec:
  type: ClusterIP
  selector:
    app: workmaite-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
